# rotate-captcha-crack

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  server.py
src/rotate_captcha_crack/: common.py
