[project]
name = "rotate-captcha-crack"
version = "0.6.0a1"
authors = [{ name = "lumina37", email = "starry.qvq@gmail.com" }]
urls = { Repository = "https://github.com/lumina37/rotate-captcha-crack" }
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "aiohttp>=3.13.2",
    "matplotlib>=3.10.7",
    "torch>=2.7.0",
    "torchvision>=0.22.0,<0.24.0",  # https://github.com/astral-sh/uv/issues/16386
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "YTT",
    "ASYNC",
    "B",
    "A",
    "C4",
    "FA",
    "ICN",
    "LOG",
    "PIE",
    "PT",
    "Q",
    "RSE",
    "SLOT",
    "TC",
    "PTH",
    "NPY",
    "PERF",
    "FURB",
]
ignore = ["A005", "E402", "E501", "E266", "COM812"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
